--- a/exe5/index.css
+++ b/exe5/index.css
@@ -1,46 +1,29 @@
-body {
-    font-family: Arial, sans-serif;
+.container{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background-color: #f4f4f4;
+    text-align: center;
 }
-.form-container {
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+form{
+    display: flex;
+    flex-direction: column;
 }
-label {
-    display: block;
-    margin: 10px 0 5px;
+input{
+    padding: 5px;
+    border-radius: 5px;
 }
-input {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+input:focus{
+    background-color: wheat;
 }
-span {
+button{
+    background-color: teal;
+
+}
+button:hover{
+    background-color: darkgreen;
+}
+span{
     color: red;
-    font-size: 12px;
-}
-button {
-    width: 100%;
-    padding: 10px;
-    background: blue;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-button:hover {
-    background: darkblue;
-}
-#successMessage {
-    color: green;
-    margin-top: 10px;
+    font-size: small;
+    position: relative;
 }
